infra/k8s/deployment-mindapi-stage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hillm-stage
  name: hillm-mindapi
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hillm-mindapi
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hillm-mindapi
    spec:
      containers:
      - image: crhillmstage.azurecr.io/hillm-stage/mindapi:latest
        imagePullPolicy: Always
        command: ['dotnet',  'HillMetrics.MIND.API.dll']
        name: hillm-mindapi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "kv-mindapi-stage"
---
apiVersion: v1
kind: Service
metadata:
  namespace: hillm-stage
  name: hillm-mindapi
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: hillm-mindapi
