infra/k8s/deployment-mindfront-stage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hillm-stage
  name: hillm-mindfront
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hillm-mindfront
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hillm-mindfront
    spec:
      containers:
      - image: crhillmstage.azurecr.io/hillm-stage/mindfront:latest
        imagePullPolicy: Always
        command: ['dotnet',  'HillMetrics.MIND.FrontApp.dll']
        name: hillm-mindfront
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "kv-mindfront-stage"
---
apiVersion: v1
kind: Service
metadata:
  namespace: hillm-stage
  name: hillm-mindfront
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: hillm-mindfront
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
  namespace: hillm-stage
  name: hillm-mindfront
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
    - mindfront.hillm.bildhosting.me
    secretName: mindfront-tls
  rules:
  - host: mindfront.hillm.bildhosting.me
    http:
      paths:
      - backend:
          service:
            name: hillm-mindfront
            port:
              number: 80
        path: /
        pathType: Prefix
